New Features: Getting player skins in offline mode without Skins Restorer Empty Tracker items that can be crafted. Players will discover the recipe after they set a bounty. These trackers can be turned into Bounty trackers with a command, clicking a bounty poster, or by crafting it with a player head. Bounty Posters can be crafted with an empty map and a player head Bounty Posters and Bounty Trackers can be washed in a cauldron to get an empty map or empty tracker Players can place any item as a bounty with all the item data kept. This is a separate feature from the currency which can be enabled in the bounty-items section in the config. Added {notification}, {mode_raw}, {tax},  {bounty_currency}, {bounty_item_values}, & {bounty_items} as placeholders bedrock-gui.yml dropdown components can use the {player} placeholder to display online players and use [@ll] in the commands to execute a command with all players death tax override for combat logging PVP flags for Worldguard regions (only tested for 1.20.6) A sound will now be played while items are being given to the player The default gui.yml file will have a settings GUI Added hide-tooltip option for custom items (version 1.20.6 or higher) Added a steal-bounties option in the config that lets you steal your own bounty if you kill the player who set it on you Added the plugin-bounty-commands config option that lets you control which command aliases are used and which command the plugin uses when forcing players to run something You can now use -s in commands to make them silent (excluding setting a bounty) Changes: Skins are now loaded more efficiently Bedrock toggle components can use a placeholder for the default state You can now use  {items} in the list-setter message in the language.yml file to display the items on the bounty. (used with the /bounty check command) Wanted tags become smart... They will slow down updating if they cause server lag Items will stop being given if the player disconnects You can now s