@@ -1,6 +1,7 @@
 package me.jadenp.notbounties.sql;
 
 import me.jadenp.notbounties.*;
+import me.jadenp.notbounties.utils.SerializeInventory;
 import me.jadenp.notbounties.utils.configuration.BountyExpire;
 import me.jadenp.notbounties.utils.BountyManager;
 import me.jadenp.notbounties.utils.configuration.ConfigOptions;
@@ -8,14 +9,19 @@ import me.jadenp.notbounties.utils.Whitelist;
 import org.bukkit.Bukkit;
 import org.bukkit.OfflinePlayer;
 import org.bukkit.entity.Player;
+import org.bukkit.inventory.ItemStack;
 import org.jetbrains.annotations.Nullable;
 
+import java.io.IOException;
+import java.io.StreamCorruptedException;
+import java.sql.Blob;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.*;
 import java.util.stream.Collectors;
 
+import static me.jadenp.notbounties.NotBounties.debug;
 import static me.jadenp.notbounties.NotBounties.isVanished;
 import static me.jadenp.notbounties.utils.BountyManager.SQL;
 import static me.jadenp.notbounties.utils.BountyManager.tryToConnect;
@@ -24,94 +30,112 @@ public class SQLGetter {
 
     private long nextReconnectAttempt;
     private int reconnectAttempts;
-    private final boolean debug = false;
     public SQLGetter (){
         nextReconnectAttempt = System.currentTimeMillis();
         reconnectAttempts = 0;
     }
 
     public void createTable(){
-        PreparedStatement ps;
-        try {
-            ps = SQL.getConnection().prepareStatement("CREATE TABLE IF NOT EXISTS notbounties" +
-                    "(" +
-                    "    uuid CHAR(36) NOT NULL," +
-                    "    name VARCHAR(16) NOT NULL," +
-                    "    setter VARCHAR(16) NOT NULL," +
-                    "    suuid CHAR(36) NOT NULL," +
-                    "    amount FLOAT(53) DEFAULT 0 NOT NULL," +
-                    "    notified BOOLEAN DEFAULT TRUE NOT NULL," +
-                    "    time BIGINT NOT NULL," +
-                    "    whitelist VARCHAR(369)," +
-                    "    playtime BIGINT DEFAULT 0 NOT NULL" +
-                    ");");
+        try (PreparedStatement ps = SQL.getConnection().prepareStatement("CREATE TABLE IF NOT EXISTS notbounties" +
+                "(" +
+                "    uuid CHAR(36) NOT NULL," +
+                "    name VARCHAR(16) NOT NULL," +
+                "    setter VARCHAR(16) NOT NULL," +
+                "    suuid CHAR(36) NOT NULL," +
+                "    amount FLOAT(53) DEFAULT 0 NOT NULL," +
+                "    notified BOOLEAN DEFAULT TRUE NOT NULL," +
+                "    time BIGINT NOT NULL," +
+                "    whitelist VARCHAR(369)," +
+                "    playtime BIGINT DEFAULT 0 NOT NULL," +
+                "    items BLOB" +
+                ");");
+            PreparedStatement checkAmount = SQL.getConnection().prepareStatement("select column_name,data_type from information_schema.columns where table_schema = ? and table_name = 'notbounties' and column_name = 'amount';");
+            PreparedStatement alterAmount = SQL.getConnection().prepareStatement("ALTER TABLE notbounties MODIFY COLUMN amount FLOAT(53);");
+            PreparedStatement checkWhitelist = SQL.getConnection().prepareStatement("SHOW COLUMNS FROM `notbounties` LIKE 'whitelist';");
+            PreparedStatement addWhitelist = SQL.getConnection().prepareStatement("ALTER TABLE notbounties ADD whitelist VARCHAR(369);");
+            PreparedStatement checkPlaytime = SQL.getConnection().prepareStatement("SHOW COLUMNS FROM `notbounties` LIKE 'playtime';");
+            PreparedStatement addPlaytime = SQL.getConnection().prepareStatement("ALTER TABLE notbounties ADD playtime BIGINT DEFAULT 0 NOT NULL;");
+            PreparedStatement checkItems = SQL.getConnection().prepareStatement("SHOW COLUMNS FROM `notbounties` LIKE 'items';");
+            PreparedStatement addItems = SQL.getConnection().prepareStatement("ALTER TABLE notbounties ADD items BLOB;");
+            PreparedStatement checkItemsType = SQL.getConnection().prepareStatement("select column_name,data_type from information_schema.columns where table_schema = ? and table_name = 'notbounties' and column_name = 'items';");
+            PreparedStatement alterItems = SQL.getConnection().prepareStatement("ALTER TABLE notbounties MODIFY COLUMN items BLOB;");){
+            
             ps.executeUpdate();
-            ps = SQL.getConnection().prepareStatement("select column_name,data_type from information_schema.columns where table_schema = ? and table_name = 'notbounties' and column_name = 'amount';");
-            ps.setString(1, SQL.getDatabase());
-            ResultSet rs = ps.executeQuery();
-            if (rs.next()){
-                if (rs.getString("data_type").equalsIgnoreCase("bigint")){
+            
+            checkAmount.setString(1, SQL.getDatabase());
+            ResultSet rs = checkAmount.executeQuery();
+            if (rs.next() && rs.getString("data_type").equalsIgnoreCase("bigint")){
                     Bukkit.getLogger().info("Updating data type for bounties");
-                    ps = SQL.getConnection().prepareStatement("ALTER TABLE notbounties MODIFY COLUMN amount FLOAT(53);");
-                    ps.executeUpdate();
+                    alterAmount.executeUpdate();
                 }
-            }
-            ps = SQL.getConnection().prepareStatement("SHOW COLUMNS FROM `notbounties` LIKE 'whitelist';");
-            rs = ps.executeQuery();
+            rs.close();
+
+            rs = checkWhitelist.executeQuery();
             if (!rs.next()){
-                ps = SQL.getConnection().prepareStatement("ALTER TABLE notbounties ADD whitelist VARCHAR(369);");
-                ps.executeUpdate();
+                addWhitelist.executeUpdate();
             }
-            ps = SQL.getConnection().prepareStatement("SHOW COLUMNS FROM `notbounties` LIKE 'playtime';");
-            rs = ps.executeQuery();
+            rs.close();
+            
+            rs = checkPlaytime.executeQuery();
             if (!rs.next()){
-                ps = SQL.getConnection().prepareStatement("ALTER TABLE notbounties ADD playtime BIGINT DEFAULT 0 NOT NULL;");
-                ps.executeUpdate();
+                addPlaytime.executeUpdate();
             }
+            rs.close();
+            
+            rs = checkItems.executeQuery();
+            if (!rs.next()){
+                addItems.executeUpdate();
+            }
+            rs.close();
+
+            checkItemsType.setString(1, SQL.getDatabase());
+            rs = checkItemsType.executeQuery();
+            if (rs.next() && rs.getString("data_type").equalsIgnoreCase("char")){
+                alterItems.executeUpdate();
+            }
+            rs.close();
 
         } catch (SQLException e){
             Bukkit.getLogger().warning(e.toString());
         }
     }
     public void createDataTable(){
-        PreparedStatement ps;
-        try {
-            ps = SQL.getConnection().prepareStatement("CREATE TABLE IF NOT EXISTS bounty_data" +
-                    "(" +
-                    "    uuid CHAR(36) NOT NULL," +
-                    "    claimed BIGINT DEFAULT 0 NOT NULL," +
-                    "    sets BIGINT DEFAULT 0 NOT NULL," +
-                    "    received BIGINT DEFAULT 0 NOT NULL," +
-                    "    alltime FLOAT(53) DEFAULT 0 NOT NULL," +
-                    "    immunity FLOAT(53) DEFAULT 0 NOT NULL," +
-                    "    allclaimed FLOAT(53) DEFAULT 0 NOT NULL," +
-                    "    PRIMARY KEY (uuid)" +
-                    ");");
+        try (PreparedStatement ps = SQL.getConnection().prepareStatement("CREATE TABLE IF NOT EXISTS bounty_data" +
+                "(" +
+                "    uuid CHAR(36) NOT NULL," +
+                "    claimed BIGINT DEFAULT 0 NOT NULL," +
+                "    sets BIGINT DEFAULT 0 NOT NULL," +
+                "    received BIGINT DEFAULT 0 NOT NULL," +
+                "    alltime FLOAT(53) DEFAULT 0 NOT NULL," +
+                "    immunity FLOAT(53) DEFAULT 0 NOT NULL," +
+                "    allclaimed FLOAT(53) DEFAULT 0 NOT NULL," +
+                "    PRIMARY KEY (uuid)" +
+                ");");
+            PreparedStatement ps1 = SQL.getConnection().prepareStatement("select column_name,data_type from information_schema.columns where table_schema = ? and table_name = 'bounty_data' and column_name = 'claimed';");
+            PreparedStatement ps2 = SQL.getConnection().prepareStatement("ALTER TABLE bounty_data MODIFY COLUMN claimed BIGINT, MODIFY sets BIGINT, MODIFY received BIGINT, MODIFY alltime FLOAT(53), MODIFY immunity FLOAT(53), MODIFY allclaimed FLOAT(53);");) {
+            
             ps.executeUpdate();
-            ps = SQL.getConnection().prepareStatement("select column_name,data_type from information_schema.columns where table_schema = ? and table_name = 'bounty_data' and column_name = 'claimed';");
-            ps.setString(1, SQL.getDatabase());
-            ResultSet rs = ps.executeQuery();
-            if (rs.next()){
-                if (rs.getString("data_type").equalsIgnoreCase("int")){
+            
+            ps1.setString(1, SQL.getDatabase());
+            ResultSet rs = ps1.executeQuery();
+            if (rs.next() && rs.getString("data_type").equalsIgnoreCase("int")){
                     Bukkit.getLogger().info("Updating data type for statistics");
-                    ps = SQL.getConnection().prepareStatement("ALTER TABLE bounty_data MODIFY COLUMN claimed BIGINT, MODIFY sets BIGINT, MODIFY received BIGINT, MODIFY alltime FLOAT(53), MODIFY immunity FLOAT(53), MODIFY allclaimed FLOAT(53);");
-                    ps.executeUpdate();
+                    ps2.executeUpdate();
                 }
-            }
+
         } catch (SQLException e){
             Bukkit.getLogger().warning(e.toString());
         }
     }
     public void createOnlinePlayerTable() {
-        PreparedStatement ps;
-        try {
-            ps = SQL.getConnection().prepareStatement("CREATE TABLE IF NOT EXISTS bounty_players" +
-                    "(" +
-                    "    uuid CHAR(36) NOT NULL," +
-                    "    name VARCHAR(16) NOT NULL," +
-                    "    id INT DEFAULT 0 NOT NULL," +
-                    "    PRIMARY KEY (uuid)" +
-                    ");");
+        try(PreparedStatement ps = SQL.getConnection().prepareStatement("CREATE TABLE IF NOT EXISTS bounty_players" +
+                "(" +
+                "    uuid CHAR(36) NOT NULL," +
+                "    name VARCHAR(16) NOT NULL," +
+                "    id INT DEFAULT 0 NOT NULL," +
+                "    PRIMARY KEY (uuid)" +
+                ");")) {
+            
             ps.executeUpdate();
         } catch (SQLException e) {
             Bukkit.getLogger().warning(e.toString());
@@ -130,8 +154,8 @@ public class SQLGetter {
     }
     private List<OfflinePlayer> getNetworkPlayers() {
         List<OfflinePlayer> networkPlayers = new ArrayList<>();
-        try {
-            PreparedStatement ps = SQL.getConnection().prepareStatement("SELECT uuid FROM bounty_players;");
+        try (PreparedStatement ps = SQL.getConnection().prepareStatement("SELECT uuid FROM bounty_players;")){
+            
             ResultSet rs = ps.executeQuery();
             while (rs.next()) {
                 String uuid = rs.getString("uuid");
@@ -139,16 +163,22 @@ public class SQLGetter {
                     networkPlayers.add(Bukkit.getOfflinePlayer(UUID.fromString(uuid)));
                 } catch (IllegalArgumentException e) {
                     Bukkit.getLogger().warning("[NotBounties] Removing invalid UUID on database: " + uuid);
-                    PreparedStatement ps1 = SQL.getConnection().prepareStatement("DELETE FROM bounty_players WHERE uuid = ?;");
-                    ps1.setString(1, uuid);
-                    ps1.executeUpdate();
+                    try (PreparedStatement ps1 = SQL.getConnection().prepareStatement("DELETE FROM bounty_players WHERE uuid = ?;")) {
+                        ps1.setString(1, uuid);
+                        ps1.executeUpdate();
+                    } catch (SQLException e2) {
+                        if (NotBounties.debug) {
+                            Bukkit.getLogger().warning("[NotBountiesNotBounties.debug] Failed to remove uuid from database.");
+                            Bukkit.getLogger().warning(e.toString());
+                        }
+                    }
                 }
             }
         } catch (SQLException e){
             if (reconnect()){
                 return getNetworkPlayers();
             }
-            if (debug)
+            if (NotBounties.debug)
                 Bukkit.getLogger().warning(e.toString());
         }
         onlinePlayers.clear();
@@ -156,15 +186,14 @@ public class SQLGetter {
         return networkPlayers;
     }
     public void refreshOnlinePlayers() {
-        try {
-            PreparedStatement ps = SQL.getConnection().prepareStatement("DELETE FROM bounty_players WHERE id = ?;");
+        try (PreparedStatement ps = SQL.getConnection().prepareStatement("DELETE FROM bounty_players WHERE id = ?;")){
             ps.setInt(1, SQL.getServerID());
             ps.executeUpdate();
         } catch (SQLException e){
             if (reconnect()){
                 refreshOnlinePlayers();
             }
-            if (debug)
+            if (NotBounties.debug)
                 Bukkit.getLogger().warning(e.toString());
         }
         for (Player player : Bukkit.getOnlinePlayers())
@@ -172,8 +201,7 @@ public class SQLGetter {
                 login(player);
     }
     public void logout(Player player) {
-        try {
-            PreparedStatement ps = SQL.getConnection().prepareStatement("DELETE FROM bounty_players WHERE uuid = ? AND id = ?;");
+        try (PreparedStatement ps = SQL.getConnection().prepareStatement("DELETE FROM bounty_players WHERE uuid = ? AND id = ?;")){
             ps.setString(1, player.getUniqueId().toString());
             ps.setInt(2, SQL.getServerID());
             ps.executeUpdate();
@@ -181,13 +209,12 @@ public class SQLGetter {
             if (reconnect()){
                 logout(player);
             }
-            if (debug)
+            if (NotBounties.debug)
                 Bukkit.getLogger().warning(e.toString());
         }
     }
     public void login(Player player) {
-        try {
-            PreparedStatement ps = SQL.getConnection().prepareStatement("INSERT INTO bounty_players(uuid, name, id) VALUES(?, ?, ?) ON DUPLICATE KEY UPDATE id = ?;");
+        try (PreparedStatement ps = SQL.getConnection().prepareStatement("INSERT INTO bounty_players(uuid, name, id) VALUES(?, ?, ?) ON DUPLICATE KEY UPDATE id = ?;")){
             ps.setString(1, player.getUniqueId().toString());
             ps.setString(2, player.getName());
             ps.setInt(3, SQL.getServerID());
@@ -197,13 +224,12 @@ public class SQLGetter {
             if (reconnect()){
                 login(player);
             }
-            if (debug)
+            if (NotBounties.debug)
                 Bukkit.getLogger().warning(e.toString());
         }
     }
     public void addData(String uuid, long claimed, long set, long received, double allTime, double immunity, double allClaimed){
-        try {
-            PreparedStatement ps = SQL.getConnection().prepareStatement("INSERT INTO bounty_data(uuid, claimed, sets, received, alltime, immunity, allclaimed) VALUES(?, ?, ?, ?, ?, ?, ?) ON DUPLICATE KEY UPDATE claimed = claimed + ?, sets = sets + ?, received = received + ?, alltime = alltime + ?, immunity = immunity + ?, allclaimed = allclaimed + ?;");
+        try (PreparedStatement ps = SQL.getConnection().prepareStatement("INSERT INTO bounty_data(uuid, claimed, sets, received, alltime, immunity, allclaimed) VALUES(?, ?, ?, ?, ?, ?, ?) ON DUPLICATE KEY UPDATE claimed = claimed + ?, sets = sets + ?, received = received + ?, alltime = alltime + ?, immunity = immunity + ?, allclaimed = allclaimed + ?;")){
             ps.setString(1, uuid);
             ps.setLong(2, claimed);
             ps.setLong(3, set);
@@ -220,14 +246,13 @@ public class SQLGetter {
             ps.executeUpdate();
         } catch (SQLException e){
             reconnect();
-            if (debug)
+            if (NotBounties.debug)
                 Bukkit.getLogger().warning(e.toString());
         }
     }
 
     public long getClaimed(String uuid){
-        try {
-            PreparedStatement ps = SQL.getConnection().prepareStatement("SELECT claimed FROM bounty_data WHERE uuid = ?;");
+        try (PreparedStatement ps = SQL.getConnection().prepareStatement("SELECT claimed FROM bounty_data WHERE uuid = ?;")){
             ps.setString(1, uuid);
             ResultSet rs = ps.executeQuery();
             if (rs.next()){
@@ -237,15 +262,14 @@ public class SQLGetter {
             if (reconnect()){
                 return getClaimed(uuid);
             }
-            if (debug)
+            if (NotBounties.debug)
                 Bukkit.getLogger().warning(e.toString());
         }
         return 0;
     }
 
     public double getTotalClaimed(String uuid){
-        try {
-            PreparedStatement ps = SQL.getConnection().prepareStatement("SELECT allclaimed FROM bounty_data WHERE uuid = ?;");
+        try (PreparedStatement ps = SQL.getConnection().prepareStatement("SELECT allclaimed FROM bounty_data WHERE uuid = ?;")){
             ps.setString(1, uuid);
             ResultSet rs = ps.executeQuery();
             if (rs.next()){
@@ -255,7 +279,6 @@ public class SQLGetter {
             if (reconnect()){
                 return getTotalClaimed(uuid);
             }
-            //e.printStackTrace();
         }
         return 0;
     }
@@ -294,7 +317,14 @@ public class SQLGetter {
                 for (Bounty bounty : getTopBounties(2)) {
                     if (hiddenNames.contains(bounty.getName()))
                         continue;
-                    data.put(bounty.getUUID(), bounty.getTotalBounty());
+                    if (results == 0)
+                        break;
+                    if (skip == 0) {
+                        data.put(bounty.getUUID(), bounty.getTotalDisplayBounty());
+                        results--;
+                    } else {
+                        skip--;
+                    }
                 }
                 return data;
         }
@@ -304,12 +334,14 @@ public class SQLGetter {
             OfflinePlayer player = NotBounties.getPlayer(hiddenNames.get(i));
             if (player == null) {
                 builder = new StringBuilder();
-                Bukkit.getLogger().warning("[NotBounties] Error getting player: " + hiddenNames.get(i) + " from hidden players!");
-                break;
+                if (debug)
+                    Bukkit.getLogger().warning("[NotBounties] Error getting player: " + hiddenNames.get(i) + " from hidden players! Has this player logged into the server?");
+                continue;
+            } else {
+                player.getUniqueId();
             }
             String uuid = player.getUniqueId().toString();
-            if (uuid == null)
-                continue;
+           
             if (i < hiddenNames.size() - 1)
                 builder.append(uuid).append("' AND uuid != '");
             else
@@ -320,8 +352,7 @@ public class SQLGetter {
             end = " LIMIT " + skip + "," + (skip + results) + ";";
         }
 
-        try {
-            PreparedStatement ps = SQL.getConnection().prepareStatement("SELECT uuid, `" + listName + "` FROM bounty_data WHERE uuid != '" + builder + "' ORDER BY ? DESC" + end);
+        try (PreparedStatement ps = SQL.getConnection().prepareStatement("SELECT uuid, `" + listName + "` FROM bounty_data WHERE uuid != '" + builder + "' ORDER BY ? DESC" + end)){
             ps.setString(1, listName);
             ResultSet rs = ps.executeQuery();
             while (rs.next()){
@@ -336,7 +367,7 @@ public class SQLGetter {
             if (reconnect()){
                 return getTopStats(leaderboard, hiddenNames, skip, results);
             }
-            if (debug)
+            if (NotBounties.debug)
                 Bukkit.getLogger().warning(e.toString());
         }
         return data;
@@ -357,7 +388,7 @@ public class SQLGetter {
             try {
                 uuids.add(UUID.fromString(uuidString));
             } catch (IllegalArgumentException e) {
-                if (debug)
+                if (NotBounties.debug)
                     Bukkit.getLogger().warning(e.toString());
             }
         }
@@ -384,8 +415,7 @@ public class SQLGetter {
     }
 
     public long getSet(String uuid){
-        try {
-            PreparedStatement ps = SQL.getConnection().prepareStatement("SELECT sets FROM bounty_data WHERE uuid = ?;");
+        try (PreparedStatement ps = SQL.getConnection().prepareStatement("SELECT sets FROM bounty_data WHERE uuid = ?;")){
             ps.setString(1, uuid);
             ResultSet rs = ps.executeQuery();
             if (rs.next()){
@@ -395,15 +425,14 @@ public class SQLGetter {
             if (reconnect()){
                 return getSet(uuid);
             }
-            if (debug)
+            if (NotBounties.debug)
                 Bukkit.getLogger().warning(e.toString());
         }
         return 0;
     }
 
     public long getReceived(String uuid){
-        try {
-            PreparedStatement ps = SQL.getConnection().prepareStatement("SELECT received FROM bounty_data WHERE uuid = ?;");
+        try (PreparedStatement ps = SQL.getConnection().prepareStatement("SELECT received FROM bounty_data WHERE uuid = ?;")){
             ps.setString(1, uuid);
             ResultSet rs = ps.executeQuery();
             if (rs.next()){
@@ -413,15 +442,14 @@ public class SQLGetter {
             if (reconnect()){
                 return getReceived(uuid);
             }
-            if (debug)
+            if (NotBounties.debug)
                 Bukkit.getLogger().warning(e.toString());
         }
         return 0;
     }
 
     public double getAllTime(String uuid){
-        try {
-            PreparedStatement ps = SQL.getConnection().prepareStatement("SELECT alltime FROM bounty_data WHERE uuid = ?;");
+        try (PreparedStatement ps = SQL.getConnection().prepareStatement("SELECT alltime FROM bounty_data WHERE uuid = ?;")){
             ps.setString(1, uuid);
             ResultSet rs = ps.executeQuery();
             if (rs.next()){
@@ -431,15 +459,14 @@ public class SQLGetter {
             if (reconnect()){
                 return getAllTime(uuid);
             }
-            if (debug)
+            if (NotBounties.debug)
                 Bukkit.getLogger().warning(e.toString());
         }
         return 0;
     }
 
     public double getImmunity(String uuid){
-        try {
-            PreparedStatement ps = SQL.getConnection().prepareStatement("SELECT immunity FROM bounty_data WHERE uuid = ?;");
+        try (PreparedStatement ps = SQL.getConnection().prepareStatement("SELECT immunity FROM bounty_data WHERE uuid = ?;");){
             ps.setString(1, uuid);
             ResultSet rs = ps.executeQuery();
             if (rs.next()){
@@ -449,7 +476,7 @@ public class SQLGetter {
             if (reconnect()){
                 getImmunity(uuid);
             }
-            if (debug)
+            if (NotBounties.debug)
                 Bukkit.getLogger().warning(e.toString());
         }
         return 0;
@@ -457,8 +484,7 @@ public class SQLGetter {
 
 
     public void setImmunity(String uuid, double amount){
-        try {
-            PreparedStatement ps = SQL.getConnection().prepareStatement("UPDATE bounty_data SET immunity = ? WHERE uuid = ?;");
+        try (PreparedStatement ps = SQL.getConnection().prepareStatement("UPDATE bounty_data SET immunity = ? WHERE uuid = ?;")){
             ps.setDouble(1, amount);
             ps.setString(2, uuid);
             ps.executeUpdate();
@@ -466,7 +492,7 @@ public class SQLGetter {
             if (reconnect()){
                 setImmunity(uuid, amount);
             }
-            if (debug)
+            if (NotBounties.debug)
                 Bukkit.getLogger().warning(e.toString());
         }
     }
@@ -474,8 +500,7 @@ public class SQLGetter {
 
 
     public void addBounty(Bounty bounty, Setter setter){
-        try {
-            PreparedStatement ps = SQL.getConnection().prepareStatement("INSERT INTO notbounties(uuid, name, setter, suuid, amount, notified, time, whitelist, playtime) VALUES(?, ?, ?, ?, ?, ?, ?, ?, ?);");
+        try (PreparedStatement ps = SQL.getConnection().prepareStatement("INSERT INTO notbounties(uuid, name, setter, suuid, amount, notified, time, whitelist, playtime, items) VALUES(?, ?, ?, ?, ?, ?, ?, ?, ?, ?);")){
             ps.setString(1, bounty.getUUID().toString());
             ps.setString(2, bounty.getName());
             ps.setString(3, setter.getName());
@@ -485,12 +510,13 @@ public class SQLGetter {
             ps.setLong(7, setter.getTimeCreated());
             ps.setString(8, encodeWhitelist(setter.getWhitelist()));
             ps.setLong(9, setter.getReceiverPlaytime());
+            ps.setBlob(10, SerializeInventory.itemStackArrayToBinaryStream(setter.getItems().toArray(new ItemStack[0])));
             ps.executeUpdate();
         } catch (SQLException e){
             if (reconnect()){
                 addBounty(bounty, setter);
             }
-            if (debug)
+            if (NotBounties.debug)
                 Bukkit.getLogger().warning(e.toString());
         }
     }
@@ -500,8 +526,7 @@ public class SQLGetter {
     }
 
     public Bounty getBounty(UUID uuid) {
-        try {
-            PreparedStatement ps = SQL.getConnection().prepareStatement("SELECT * FROM `notbounties` WHERE uuid = ?;");
+        try (PreparedStatement ps = SQL.getConnection().prepareStatement("SELECT * FROM `notbounties` WHERE uuid = ?;")){
             ps.setString(1, uuid.toString());
             ResultSet rs = ps.executeQuery();
             List<Setter> setters = new ArrayList<>();
@@ -510,8 +535,16 @@ public class SQLGetter {
                 if (name.isEmpty()){
                     name = rs.getString("name");
                 }
+                Blob encodedItems = rs.getBlob("items");
+                List<ItemStack> items;
+                try {
+                    items = encodedItems != null ? new ArrayList<>(Arrays.asList(SerializeInventory.itemStackArrayFromBinaryStream(encodedItems.getBinaryStream()))) : new ArrayList<>();
+                } catch (StreamCorruptedException e) {
+                    // items haven't been set yet
+                    items = new ArrayList<>();
+                }
                 UUID setterUUID = rs.getString("suuid").equalsIgnoreCase("CONSOLE") ? new UUID(0,0) : UUID.fromString(rs.getString("suuid"));
-                setters.add(new Setter(rs.getString("setter"), setterUUID, rs.getDouble("amount"), rs.getLong("time"), rs.getBoolean("notified"), decodeWhitelist(rs.getString("whitelist")), rs.getLong("playtime")));
+                setters.add(new Setter(rs.getString("setter"), setterUUID, rs.getDouble("amount"), items, rs.getLong("time"), rs.getBoolean("notified"), decodeWhitelist(rs.getString("whitelist")), rs.getLong("playtime")));
             }
             if (setters.isEmpty())
                 return null;
@@ -520,8 +553,12 @@ public class SQLGetter {
             if (reconnect()){
                 return getBounty(uuid);
             }
-            if (debug)
+            if (NotBounties.debug)
                 Bukkit.getLogger().warning(e.toString());
+        } catch (IOException e) {
+            // error parsing encoded items
+            Bukkit.getLogger().warning("[NotBounties] Error decoding items from SQL");
+            Bukkit.getLogger().warning(e.toString());
         }
         return null;
     }
@@ -530,8 +567,7 @@ public class SQLGetter {
         addBounty(bounty);
     }
     public void editBounty(UUID uuid, UUID setterUUID, double amount) {
-        try {
-            PreparedStatement ps = SQL.getConnection().prepareStatement("UPDATE notbounties SET amount = amount + ? WHERE uuid = ? AND suuid = ?;");
+        try (PreparedStatement ps = SQL.getConnection().prepareStatement("UPDATE notbounties SET amount = amount + ? WHERE uuid = ? AND suuid = ?;")){
             ps.setDouble(1, amount);
             ps.setString(2, uuid.toString());
             ps.setString(3, setterUUID.toString());
@@ -540,26 +576,24 @@ public class SQLGetter {
             if (reconnect()){
                 editBounty(uuid, setterUUID, amount);
             }
-            if (debug)
+            if (NotBounties.debug)
                 Bukkit.getLogger().warning(e.toString());
         }
     }
     public void removeBounty(UUID uuid) {
-        try {
-            PreparedStatement ps = SQL.getConnection().prepareStatement("DELETE FROM notbounties WHERE uuid = ?");
+        try (PreparedStatement ps = SQL.getConnection().prepareStatement("DELETE FROM notbounties WHERE uuid = ?")){
             ps.setString(1, uuid.toString());
             ps.executeUpdate();
         } catch (SQLException e){
             if (reconnect()){
                 removeBounty(uuid);
             }
-            if (debug)
+            if (NotBounties.debug)
                 Bukkit.getLogger().warning(e.toString());
         }
     }
     public void removeSetter(UUID uuid, UUID setterUUID) {
-        try {
-            PreparedStatement ps = SQL.getConnection().prepareStatement("DELETE notbounties WHERE uuid = ? AND suuid = ?;");
+        try (PreparedStatement ps = SQL.getConnection().prepareStatement("DELETE notbounties WHERE uuid = ? AND suuid = ?;")){
             ps.setString(1, uuid.toString());
             ps.setString(2, setterUUID.toString());
             ps.executeUpdate();
@@ -567,7 +601,7 @@ public class SQLGetter {
             if (reconnect()){
                 removeSetter(uuid, setterUUID);
             }
-            if (debug)
+            if (NotBounties.debug)
                 Bukkit.getLogger().warning(e.toString());
         }
     }
@@ -592,11 +626,11 @@ public class SQLGetter {
         long minTime = (long) (System.currentTimeMillis() - 1000L * 60 * 60 * 24 * BountyExpire.getTime());
         double autoExpire = ConfigOptions.autoBountyExpireTime == -1 ? BountyExpire.getTime() : ConfigOptions.autoBountyExpireTime;
         long minTimeAuto = (long) (System.currentTimeMillis() - 1000L * 60 * 60 * 24 * autoExpire);
-        try {
-            PreparedStatement ps = SQL.getConnection().prepareStatement("DELETE notbounties WHERE time <= ? AND suuid != ?;");
-            PreparedStatement ps1 = SQL.getConnection().prepareStatement("SELECT * FROM notbounties WHERE time <= ? AND suuid != ?;");
-            PreparedStatement ps2 = SQL.getConnection().prepareStatement("DELETE notbounties WHERE time <= ? AND suuid == ?;");
-            PreparedStatement ps3 = SQL.getConnection().prepareStatement("SELECT * FROM notbounties WHERE time <= ? AND suuid=!= ?;");
+        try (PreparedStatement ps = SQL.getConnection().prepareStatement("DELETE notbounties WHERE time <= ? AND suuid != ?;");
+             PreparedStatement ps1 = SQL.getConnection().prepareStatement("SELECT * FROM notbounties WHERE time <= ? AND suuid != ?;");
+             PreparedStatement ps2 = SQL.getConnection().prepareStatement("DELETE notbounties WHERE time <= ? AND suuid == ?;");
+             PreparedStatement ps3 = SQL.getConnection().prepareStatement("SELECT * FROM notbounties WHERE time <= ? AND suuid=!= ?;");) {
+
             ps.setLong(1, minTime);
             ps1.setLong(1, minTime);
             ps2.setLong(1, minTimeAuto);
@@ -610,13 +644,26 @@ public class SQLGetter {
             if (BountyExpire.getTime() > 0) {
                 ResultSet rs = ps1.executeQuery();
                 while (rs.next()) {
-                    UUID receiver = UUID.fromString(rs.getString("uuid"));
-                    UUID setterUUID = rs.getString("suuid").equalsIgnoreCase("CONSOLE") ? new UUID(0, 0) : UUID.fromString(rs.getString("suuid"));
-                    Setter setter = new Setter(rs.getString("setter"), setterUUID, rs.getDouble("amount"), rs.getLong("time"), rs.getBoolean("notified"), decodeWhitelist(rs.getString("whitelist")), rs.getLong("playtime"));
-                    if (expiredBounties.containsKey(receiver)) {
-                        expiredBounties.get(receiver).add(setter);
-                    } else {
-                        expiredBounties.put(receiver, new ArrayList<>(List.of(setter)));
+                    Blob encodedItems = rs.getBlob("items");
+                    try {
+                        List<ItemStack> items;
+                        try {
+                            items = encodedItems != null ? new ArrayList<>(Arrays.asList(SerializeInventory.itemStackArrayFromBinaryStream(encodedItems.getBinaryStream()))) : new ArrayList<>();
+                        } catch (StreamCorruptedException e) {
+                            items = new ArrayList<>();
+                        }
+                        UUID receiver = UUID.fromString(rs.getString("uuid"));
+                        UUID setterUUID = rs.getString("suuid").equalsIgnoreCase("CONSOLE") ? new UUID(0, 0) : UUID.fromString(rs.getString("suuid"));
+                        Setter setter = new Setter(rs.getString("setter"), setterUUID, rs.getDouble("amount"), items, rs.getLong("time"), rs.getBoolean("notified"), decodeWhitelist(rs.getString("whitelist")), rs.getLong("playtime"));
+                        if (expiredBounties.containsKey(receiver)) {
+                            expiredBounties.get(receiver).add(setter);
+                        } else {
+                            expiredBounties.put(receiver, new ArrayList<>(List.of(setter)));
+                        }
+                    } catch (IOException e) {
+                        // error parsing encoded items
+                        Bukkit.getLogger().warning("[NotBounties] Error decoding items from SQL");
+                        Bukkit.getLogger().warning(e.toString());
                     }
                 }
                 ps.executeUpdate();
@@ -624,13 +671,26 @@ public class SQLGetter {
             if (autoExpire > -1) {
                 ResultSet rs = ps3.executeQuery();
                 while (rs.next()) {
-                    UUID receiver = UUID.fromString(rs.getString("uuid"));
-                    UUID setterUUID = rs.getString("suuid").equalsIgnoreCase("CONSOLE") ? new UUID(0, 0) : UUID.fromString(rs.getString("suuid"));
-                    Setter setter = new Setter(rs.getString("setter"), setterUUID, rs.getDouble("amount"), rs.getLong("time"), rs.getBoolean("notified"), decodeWhitelist(rs.getString("whitelist")), rs.getLong("playtime"));
-                    if (expiredBounties.containsKey(receiver)) {
-                        expiredBounties.get(receiver).add(setter);
-                    } else {
-                        expiredBounties.put(receiver, new ArrayList<>(List.of(setter)));
+                    Blob encodedItems = rs.getBlob("items");
+                    try {
+                        List<ItemStack> items;
+                        try {
+                            items = encodedItems != null ? new ArrayList<>(Arrays.asList(SerializeInventory.itemStackArrayFromBinaryStream(encodedItems.getBinaryStream()))) : new ArrayList<>();
+                        } catch (StreamCorruptedException e) {
+                            items = new ArrayList<>();
+                        }
+                        UUID receiver = UUID.fromString(rs.getString("uuid"));
+                        UUID setterUUID = rs.getString("suuid").equalsIgnoreCase("CONSOLE") ? new UUID(0, 0) : UUID.fromString(rs.getString("suuid"));
+                        Setter setter = new Setter(rs.getString("setter"), setterUUID, rs.getDouble("amount"), items, rs.getLong("time"), rs.getBoolean("notified"), decodeWhitelist(rs.getString("whitelist")), rs.getLong("playtime"));
+                        if (expiredBounties.containsKey(receiver)) {
+                            expiredBounties.get(receiver).add(setter);
+                        } else {
+                            expiredBounties.put(receiver, new ArrayList<>(List.of(setter)));
+                        }
+                    } catch (IOException e) {
+                        // error parsing encoded items
+                        Bukkit.getLogger().warning("[NotBounties] Error decoding items from SQL");
+                        Bukkit.getLogger().warning(e.toString());
                     }
                 }
                 ps2.executeUpdate();
@@ -640,25 +700,38 @@ public class SQLGetter {
             if (reconnect()){
                return removeOldBounties();
             }
-            if (debug)
+            if (NotBounties.debug)
                 Bukkit.getLogger().warning(e.toString());
         }
         return new HashMap<>();
     }
 
     public List<Bounty> getTopBounties(int sortType) {
-        try {
-            PreparedStatement ps = SQL.getConnection().prepareStatement("SELECT * FROM notbounties;");
+        try (PreparedStatement ps = SQL.getConnection().prepareStatement("SELECT * FROM notbounties;")){
+
             ResultSet resultSet = ps.executeQuery();
 
             Map<String, Bounty> bountyAmounts = new HashMap<>();
             while (resultSet.next()) {
                 String uuid = resultSet.getString("uuid");
                 if (uuid != null) {
-                    if (bountyAmounts.containsKey(uuid)){
-                       bountyAmounts.get(uuid).addBounty(resultSet.getDouble("amount"), decodeWhitelist(resultSet.getString("whitelist")));
-                    } else {
-                        bountyAmounts.put(uuid, new Bounty(UUID.fromString(uuid), new ArrayList<>(Collections.singletonList(new Setter(resultSet.getString("setter"), UUID.fromString(resultSet.getString("suuid")), resultSet.getDouble("amount"), resultSet.getLong("time"), resultSet.getBoolean("notified"), decodeWhitelist(resultSet.getString("whitelist")), resultSet.getLong("playtime")))), resultSet.getString("name")));
+                    try {
+                        Blob encodedItems = resultSet.getBlob("items");
+                        List<ItemStack> items;
+                        try {
+                            items = encodedItems != null ? new ArrayList<>(Arrays.asList(SerializeInventory.itemStackArrayFromBinaryStream(encodedItems.getBinaryStream()))) : new ArrayList<>();
+                        } catch (StreamCorruptedException e) {
+                            items = new ArrayList<>();
+                        }
+                        if (bountyAmounts.containsKey(uuid)){
+                            bountyAmounts.get(uuid).addBounty(resultSet.getDouble("amount"), items, decodeWhitelist(resultSet.getString("whitelist")));
+                        } else {
+                            bountyAmounts.put(uuid, new Bounty(UUID.fromString(uuid), new ArrayList<>(Collections.singletonList(new Setter(resultSet.getString("setter"), UUID.fromString(resultSet.getString("suuid")), resultSet.getDouble("amount"), items, resultSet.getLong("time"), resultSet.getBoolean("notified"), decodeWhitelist(resultSet.getString("whitelist")), resultSet.getLong("playtime")))), resultSet.getString("name")));
+                        }
+                    } catch (IOException e) {
+                        // error parsing encoded items
+                        Bukkit.getLogger().warning("[NotBounties] Error decoding items from SQL");
+                        Bukkit.getLogger().warning(e.toString());
                     }
                 }
             }
@@ -670,8 +743,8 @@ public class SQLGetter {
                 for (int j = i + 1; j < sortedList.size(); j++) {
                     if ((sortedList.get(i).getSetters().get(0).getTimeCreated() > sortedList.get(j).getSetters().get(0).getTimeCreated() && sortType == 0) || // oldest bounties at top
                             (sortedList.get(i).getSetters().get(0).getTimeCreated() < sortedList.get(j).getSetters().get(0).getTimeCreated() && sortType == 1) || // newest bounties at top
-                            (sortedList.get(i).getTotalBounty() < sortedList.get(j).getTotalBounty() && sortType == 2) || // more expensive bounties at top
-                            (sortedList.get(i).getTotalBounty() > sortedList.get(j).getTotalBounty() && sortType == 3)) { // less expensive bounties at top
+                            (sortedList.get(i).getTotalDisplayBounty() < sortedList.get(j).getTotalDisplayBounty() && sortType == 2) || // more expensive bounties at top
+                            (sortedList.get(i).getTotalDisplayBounty() > sortedList.get(j).getTotalDisplayBounty() && sortType == 3)) { // less expensive bounties at top
                         temp = sortedList.get(i);
                         sortedList.set(i, sortedList.get(j));
                         sortedList.set(j, temp);
@@ -683,7 +756,7 @@ public class SQLGetter {
             if (reconnect()){
                 return getTopBounties(sortType);
             }
-            if (debug)
+            if (NotBounties.debug)
                 Bukkit.getLogger().warning(e.toString());
         }
         return new ArrayList<>();
@@ -691,8 +764,7 @@ public class SQLGetter {
     }
 
     public int removeExtraData() {
-        try {
-            PreparedStatement ps = SQL.getConnection().prepareStatement("DELETE FROM notbounties WHERE amount = ?;");
+        try (PreparedStatement ps = SQL.getConnection().prepareStatement("DELETE FROM notbounties WHERE amount = ?;")){
             ps.setDouble(1, 0L);
             return ps.executeUpdate();
         } catch (SQLException e){
@@ -700,7 +772,7 @@ public class SQLGetter {
                 return removeExtraData();
             }
 
-            if (debug)
+            if (NotBounties.debug)
                 Bukkit.getLogger().warning(e.toString());
         }
         return 0;
